--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,14 @@
     </string>
     <string name="action_register">Register</string>
     <string name="success">success</string>
+    <string name="tix">Tickets</string>
+    <string name="merch">Merchandise</string>
+    <string name="Games">Games: </string>
+    <string name="Type">Type: </string>
+    <string name="Quantity">Quantity: </string>
+    <string name="Size">Size: </string>
+    <string name="Price">Price: </string>
+    <string name="SingleGame">Admission to a single game of your choosing.</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
