--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,11 +18,13 @@
     <string name="tix">Tickets</string>
     <string name="merch">Merchandise</string>
     <string name="Games">Games: </string>
+    <string name="SingleGames">Single Game Ticket</string>
+    <string name="Season">Season Ticket</string>
     <string name="Type">Type: </string>
     <string name="Quantity">Quantity: </string>
     <string name="Size">Size: </string>
     <string name="Price">Price: </string>
-    <string name="SingleGame">Admission to a single game of your choosing.</string>
+    <string name="SingleGamesDes">Admission to a single game of your choosing.</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
