--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,12 +18,31 @@
     <string name="tix">Tickets</string>
     <string name="merch">Merchandise</string>
     <string name="Games">Games: </string>
+    <string name="SingleGames">Single Game Ticket</string>
+    <string name="Season">Season Ticket</string>
     <string name="Type">Type: </string>
     <string name="Quantity">Quantity: </string>
     <string name="Size">Size: </string>
     <string name="Price">Price: </string>
-    <string name="SingleGame">Admission to a single game of your choosing.</string>
+    <string name="SingleGamesDes">Admission to a single game of your choosing.</string>
+    <string name="itemName">pass_item</string>
+    <string name="itemIMG">pass_itemIMG</string>
+    <string name="itemPrice">pass_itemPrice</string>
+    <string name="itemType">pass_itemType</string>
+    <string name="currentActivity">current_Activity</string>
+
+    <string name="shopFrag">Shop Fragment</string>
+    <string name="buyGameFrag">Buy Game Fragment</string>
+    <string name="buyItemFrag">Buy Item Frag</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="quantity">
+        <item>1</item><item>2</item><item>3</item><item>4</item><item>5</item><item>6</item>
+    </string-array>
+
+    <string-array name="adult_youth">
+        <item>Adult</item><item>Youth</item>
+    </string-array>
 </resources>
