--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,15 +34,23 @@
     <string name="shopFrag">Shop Fragment</string>
     <string name="buyGameFrag">Buy Game Fragment</string>
     <string name="buyItemFrag">Buy Item Frag</string>
+    <string name="showCart">Cart Frag</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string-array name="quantity">
-        <item>1</item><item>2</item><item>3</item><item>4</item><item>5</item><item>6</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
     </string-array>
 
     <string-array name="adult_youth">
-        <item>Adult</item><item>Youth</item>
+        <item>Adult</item>
+        <item>Youth</item>
     </string-array>
 </resources>
